syntax = "proto3";
option java_package = "io.github.zomky.client.protobuf";
option java_multiple_files = true;

message InfoRequest {

}

message InfoResponse {
    repeated int32 members = 1;
}
